--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,2 +1,2 @@
 <!--pages/home/home.wxml-->
-<text>the homepage text is created by Existo</text>
+<text>the homepage text is created by raw_recruit</text>
