--- a/app.wxss
+++ b/app.wxss
@@ -8,3 +8,45 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+/**marybranch 的wxss**/
+/* 开始 */
+.container1 {
+  /* height: 100%;
+   width:100%;  */
+   min-height:1206rpx;  
+   /* height:2412rpx; */
+   display: flex; 
+  flex-direction:column;
+  align-items: center;
+  justify-content: space-between; 
+  box-sizing: border-box;
+  background:#F9F5EC;
+  font-size:14pt;
+  color:#9B9B9B;
+} 
+
+/***搜索列表***/
+.like-list{
+width:100%;
+}
+.like-list::after{
+content: '';
+display: block;
+clear: both;
+}
+.like-item{
+width:100%;
+height:240rpx;
+padding:24rpx;
+ /* background:#F3EBDF;  */
+ background:rgba(255,255,255,0.8);
+ /* border-bottom:1px solid #c3c3c3; */
+position: relative;
+box-sizing: border-box;
+ margin-bottom:20rpx;
+}
+.like-item image{
+width:250rpx;
+height:100%;
+}
+/* 结束 */
